# nebius-token-factory-cookbook

coding/: README.md
distillation/distillation-1/: 1_generate_training_data.ipynb  2_training.ipynb  3_evaluate_model.ipynb  README.md
tool-calling/: tavily_tool_calling.ipynb
workshops/token-factory-workshop/: README.md  collecting-production-logs.md  dedicated-endpoints.md  distillation.md  explore-token-factory.md  fine-tuning.md  getting-started.md  pyproject.toml  structured-output.md  tavily-search.md
workshops/token-factory-workshop/data/: customer-email1.txt
